[gd_scene load_steps=2 format=3 uid="uid://dwqxy0ak71il7"]

[ext_resource type="Script" path="res://UI/ExperienceLevelUi.gd" id="1_ig07s"]

[node name="ExperienceLevelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 159.0
offset_right = -205.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig07s")

[node name="ExpBarBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 13.0
offset_right = 102.0
offset_bottom = 19.0
color = Color(0, 0.243137, 0.00392157, 0.568627)

[node name="ExpBar" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 13.0
offset_right = 102.0
offset_bottom = 19.0
color = Color(0, 0.513726, 0.0117647, 1)

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 13.0
offset_right = 90.0
offset_bottom = 39.0
scale = Vector2(0.25, 0.25)
text = "LVL:"

[node name="ExpLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 13.0
offset_right = 112.0
offset_bottom = 39.0
scale = Vector2(0.25, 0.25)
text = "EXP:"
